Fixed shifting track styles bug

--- a/public/index.css
+++ b/public/index.css
@@ -542,7 +542,7 @@ div[role="link"] {
 #selection-container .track-name-album-container,
 #selection-container .track-name-album-container:focus {
   background: #55baba;
-  border-top: 2px solid #55baba;
+  border-top: 1px solid #55baba;
   outline: none;
   padding-top: 0;
   color: white;
